--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/chess-chatting
-spring.datasource.username=root
-spring.datasource.password=H4Z31h1w
+spring.datasource.username=
+spring.datasource.password=
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
